modules/microfocus-demo/08-bastion.tf
//  Launch configuration for the consul cluster auto-scaling group.
/* resource "aws_eip" "bastion_eip" {
  instance = "${aws_instance.bastion.id}"
  vpc      = true
}

resource "aws_instance" "bastion" {
  ami                  = "ami-06f6f5dbfde5d7c50"
  instance_type        = "t2.small"
  iam_instance_profile = "${aws_iam_instance_profile.bastion-instance-profile.id}"
  subnet_id            = "${aws_subnet.microfocus-demo-public-subnet.id}"

  vpc_security_group_ids = [
    "${aws_security_group.microfocus-demo-vpc.id}",
    "${aws_security_group.microfocus-demo-ssh.id}",
    "${aws_security_group.microfocus-demo-public-egress.id}",
  ]

  key_name = "${aws_key_pair.keypair.key_name}"

  //  Use our common tags and add a specific name.
  tags = "${merge(
    local.common_tags,
    map(
      "Name", "OpenShift Bastion"
    )
  )}"
} */
